compiler/w_session/tests/errors/optimizable-if-false.w
fn main(a: u32, b: u32): u32 {
    if 0 {
        a
    } else {
        b
    }
}