compiler/w_session/tests/errors/optimizable-if-false.stderr
tests/errors/optimizable-if-false.w:2:8: error: condition evaluates to false
    if 0 {
       ^
